31 Dec 2003 mipsator
 * added str_to_dynary_adv() to handle numerous separators.
 * changed str_to_dynary() to reuse str_to_dynary_adv() code.

30 Dec 2003 mipsator
 * imported some code for internal support of pkgconfig.
 * added pkgconfig_test.c in tests.
 * added variable substitution in pkgconfig support.
 * added pkg_recurse() in pkgconfig to prepare for recursion.

29 Dec 2003 mipsator
 * moved hash_add() as hash_update() and kept hash_add() as an alias.
 * updated hash_init_adv() to support data duplication.
 * updated hash_init() in sync with hash_init_adv().
 * added hash_update_dup() to automatically duplicate given data.
 * updated use of hash_add() in favor of hash_update() and
	hash_update_dup() in all files but pmksetup.c (check soon).
 * commented some code in autoconf.c which seems to be specific to
	dillo but not to autoconf.
 * made consistent use of boolean string values.
 * replaced remaining hash_add() calls in pmksetup.

28 Dec 2003 mipsator
 * added check_lang_comp() into functool to get lang info via compiler.
 * added code to set shared lib flags (SLCFLAGS and SLCXXFLAGS).
 * updated pmkcomp.dat to sync with shared lib support.
 * updated samples to sync with shared lib support.
 * fixed some hash_add() calls were not using strdup().

# snapshot 0.7.8

23 Dec 2003 mipsator
 * moved compiler detection in SETTINGS section using DETECT option.
 * fixed bad stuff discovered by lint (wasn't changing pmk's behavior).
 * added some data in pmkcomp.dat about shared libs.
 * updated pmkfile.5 man page.

20 Dec 2003 mipsator
 * avoided use of srandomdev() in mkstemps as it is not portable.

19 Dec 2003 mipsator
 * added mkstemps.c, mkstemps.h and pmk_unistd.h in compat directory.
 * added detection of mkstemps() in pmkcfg.sh and pmkfile.
 * fixed pmkcfg.sh for function detection in an header.
 * replaced unistd header includes by pmk_unistd header.

18 Dec 2003 mipsator
 * fixed detect.c and func.c to use correctly tmps_open().

# snapshot 0.7.7
