@@ -1,6 +1,8 @@
 31 Dec 2003 mipsator
  * added str_to_dynary_adv() to handle numerous separators.
  * changed str_to_dynary() to reuse str_to_dynary_adv() code.
+ * rewritten and cleaned pkgconfig stuff.
+ * updated pkgconfig_test.c to sync with changes.
 
 30 Dec 2003 mipsator
  * imported some code for internal support of pkgconfig.
